--- a/interfaces/ErrorStrings.html
+++ b/interfaces/ErrorStrings.html
@@ -23,7 +23,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">ErrorStrings</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/bd2681d/src/use-form.ts#L182">use-form.ts:182</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/9043641/src/types.ts#L192">types.ts:192</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -44,33 +44,33 @@
 <div class="tsd-comment tsd-typography"><p>Error message for when the field length is too long.</p>
 <p>Can either be a string, or a function resolving to a string.</p>
 <p>Default:</p>
-<pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-2">n</span><span class="hl-1">) </span><span class="hl-4">=&gt;</span><span class="hl-1"> </span><span class="hl-3">`Must be no more than </span><span class="hl-4">${</span><span class="hl-2">n</span><span class="hl-4">}</span><span class="hl-3"> characters long`</span>
+<pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-5">n</span><span class="hl-1">) </span><span class="hl-0">=&gt;</span><span class="hl-1"> </span><span class="hl-6">`Must be no more than </span><span class="hl-0">${</span><span class="hl-5">n</span><span class="hl-0">}</span><span class="hl-6"> characters long`</span>
 </code></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/bd2681d/src/use-form.ts#L210">use-form.ts:210</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/9043641/src/types.ts#L220">types.ts:220</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="minLength" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>min<wbr/>Length</span><a href="#minLength" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">min<wbr/>Length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>length<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span></div>
 <div class="tsd-comment tsd-typography"><p>Error message for when the field length is too short.</p>
 <p>Can either be a string, or a function resolving to a string.</p>
 <p>Default:</p>
-<pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-2">n</span><span class="hl-1">) </span><span class="hl-4">=&gt;</span><span class="hl-1"> </span><span class="hl-3">`Must be at least </span><span class="hl-4">${</span><span class="hl-2">n</span><span class="hl-4">}</span><span class="hl-3"> characters long`</span>
+<pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-5">n</span><span class="hl-1">) </span><span class="hl-0">=&gt;</span><span class="hl-1"> </span><span class="hl-6">`Must be at least </span><span class="hl-0">${</span><span class="hl-5">n</span><span class="hl-0">}</span><span class="hl-6"> characters long`</span>
 </code></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/bd2681d/src/use-form.ts#L199">use-form.ts:199</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/9043641/src/types.ts#L209">types.ts:209</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="pattern" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>pattern</span><a href="#pattern" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">pattern<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>pattern<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span></div>
 <div class="tsd-comment tsd-typography"><p>Error message for when the field value does not match the given pattern.</p>
 <p>Can either be a string, or a function resolving to a string.</p>
 <p>Default:</p>
-<pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-2">p</span><span class="hl-1">) </span><span class="hl-4">=&gt;</span><span class="hl-1"> </span><span class="hl-3">`Must match pattern </span><span class="hl-4">${</span><span class="hl-2">p</span><span class="hl-4">}</span><span class="hl-3">`</span>
+<pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-5">p</span><span class="hl-1">) </span><span class="hl-0">=&gt;</span><span class="hl-1"> </span><span class="hl-6">`Must match pattern </span><span class="hl-0">${</span><span class="hl-5">p</span><span class="hl-0">}</span><span class="hl-6">`</span>
 </code></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/bd2681d/src/use-form.ts#L221">use-form.ts:221</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/9043641/src/types.ts#L231">types.ts:231</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="required" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>required</span><a href="#required" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">required<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -78,7 +78,7 @@
 <p>Default: <code>&quot;Required&quot;</code></p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/bd2681d/src/use-form.ts#L188">use-form.ts:188</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/9043641/src/types.ts#L198">types.ts:198</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
