deploy: f19d1933e077e7217b0cb0b3f1b671ca1b7472af

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 <a href="#formplex---react" id="formplex---react" style="color: inherit; text-decoration: none;">
   <h1>FormPlex - React</h1>
 </a>
-<h2><a href="https://chenasraf.github.io/formplex-react/">Full documentation</a></h2>
+<h2 align="center">
+
+<p><a href="https://github.com/chenasraf/formplex-react">GitHub</a> |
+<a href="https://casraf.blog/formplex-react">Documentation</a> |
+<a href="https://npmjs.com/package/formplex-react">NPM</a> | <a href="https://casraf.dev">casraf.dev</a></p>
+</h2>
 
 <p>Handle forms in your React apps with incredible ease.</p>
 <p>FormPlex lets you use React forms without the hassle; including easy validations, predictable and
