deploy: 931d3c70ad40272947eb3c493a1789f82d871c6f

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <h2 align="center">
 
 <p><a href="https://github.com/chenasraf/formplex-react">GitHub</a> |
-<a href="https://casraf.blog/formplex-react">Documentation</a> |
-<a href="https://npmjs.com/package/formplex-react">NPM</a> | <a href="https://casraf.dev">casraf.dev</a></p>
+<a href="https://casraf.dev/formplex-react">Documentation</a> | <a href="https://npmjs.com/package/formplex-react">NPM</a>
+| <a href="https://casraf.dev">casraf.dev</a></p>
 </h2>
 
 <p>Handle forms in your React apps with incredible ease.</p>
